variables, mixin names and filenames corrections

--- a/scss/page-transitions/animations/_delay.scss
+++ b/scss/page-transitions/animations/_delay.scss
@@ -1,4 +1,4 @@
-@mixin page-transition__delay {
+@mixin page-transitions__animations__delay {
 
 .pt-page-delay100 {
     -webkit-animation-delay: .1s;
