--- a/scss/page-transitions/animations/_fade.scss
+++ b/scss/page-transitions/animations/_fade.scss
@@ -1,4 +1,4 @@
-@mixin page-transition__fade {
+@mixin page-transitions__animations__fade {
 .pt-page-fade {
     -webkit-animation: fade .7s ease both;
     -moz-animation: fade .7s ease both;
